# colortools

./: README.md  pyproject.toml  setup.cfg  setup.py
colortools/: color_converter.py  color_utils.py
colortools.egg-info/: PKG-INFO  SOURCES.txt
src/colortools/: __about__.py  color_converter.py  color_utils.py
src/colortools/data/: meodai.csv
tests/: test_color_converter.py
