[metadata]
name = colortools-LENTOLEN
version = 0.0.2
author = LentoLen
author_email = lenn.vnn@gmail.com
description = A package to do color conversions and comparisons
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/LentoLen/colortools
project_urls =
    Bug Tracker = https://github.com/LentoLen/colortools/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src